--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,3 +4,6 @@
   package:
     name: "{{ git_packages }}"
     state: "{{ git_package_state }}"
+  register: git_install_git
+  until: git_install_git is succeeded
+  retries: 3
