--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,5 +1,17 @@
 ---
 # tasks file for git
+- name: test veriables and environment
+  assert:
+    that:
+      - git_username is defined
+      - git_group is defined
+      - git_user_email is defined
+      - git_user_name is defined
+      - git_username is defined
+      - git_groupname is defined
+      - git_repository_destination is defined
+      - git_repositories is defined
+
 - name: install git
   package:
     name: "{{ git_packages }}"
@@ -7,3 +19,35 @@
   register: git_install_git
   until: git_install_git is succeeded
   retries: 3
+
+- name: place git configuration
+  template:
+    src: gitconfig.j2
+    dest: /home/{{ git_username }}/.gitconfig
+  when:
+    - git_user_email is defined
+    - git_user_name is defined
+    - git_username is defined
+
+- name: create repository_destination
+  file:
+    path: "{{ git_repository_destination }}"
+    state: directory
+    owner: "{{ git_username }}"
+    group: "{{ git_groupname }}"
+  when:
+    - git_repository_destination is defined
+    - git_username is defined
+    - git_groupname is defined
+
+- name: clone all roles
+  git:
+    repo: "{{ item }}"
+    dest: "{{ git_repository_destination }}"
+    accept_hostkey: yes
+  with_items: "{{ git_repositories }}"
+  become_user: "{{ git_username }}"
+  when:
+    - git_repository_destination is defined
+    - git_repositories is defined
+    - git_username is defined
