--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,7 +1,7 @@
 ---
 # defaults file for git
 
-# The username to place the gitconfig file.
+# The system username in /home where to place the gitconfig file.
 git_username: johndoe
 
 # The group to own directories.
