--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -21,7 +21,7 @@
     owner: "{{ git_username }}"
     group: "{{ git_groupname }}"
   when:
-    - getent_passwd.user_name is defined
+    - getent_passwd[git_username] is defined
 
 - name: place git configuration
   template:
@@ -31,7 +31,7 @@
     - git_user_email is defined
     - git_user_name is defined
     - git_username is defined
-    - getent_passwd.user_name is defined
+    - getent_passwd[git_username] is defined
 
 - name: create repository_destination
   file:
@@ -43,7 +43,7 @@
     - git_repository_destination is defined
     - git_username is defined
     - git_groupname is defined
-    - getent_passwd.user_name is defined
+    - getent_passwd[git_username] is defined
 
 - name: clone all roles
   git:
@@ -58,4 +58,4 @@
     - git_repository_destination is defined
     - git_repositories is defined
     - git_username is defined
-    - getent_passwd.user_name is defined
+    - getent_passwd[git_username] is defined
