--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -48,7 +48,7 @@
 - name: clone all roles
   git:
     repo: "{{ item.name }}"
-    dest: "{{ git_repository_destination }}/{{ item.name }}"
+    dest: "{{ git_repository_destination }}/{{ item.name | url('path') | split('/')[2] | split('.git')[0] }}"
     accept_hostkey: yes
     version: "{{ item.version | default('HEAD') }}"
   with_items: "{{ git_repositories }}"
