--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,14 +2,14 @@
 # defaults file for git
 
 # The system username in /home where to place the gitconfig file.
-git_username: johndoe
+# git_username: johndoe
 
 # The group to own directories.
-git_groupname: "{{ git_username }}"
+# git_groupname: "{{ git_username }}"
 
 # Settings for git configuration.
-git_user_email: johndoe@example.com
-git_user_name: John Doe
+# git_user_email: johndoe@example.com
+# git_user_name: John Doe
 
 # Where to place the copies of the repositories.
 git_repository_destination: /home/{{ git_username }}/Documents/github.com/{{ git_username }}
