--- a/molecule/alpine-edge/playbook.yml
+++ b/molecule/alpine-edge/playbook.yml
@@ -1,8 +1,23 @@
 ---
 - name: Converge
   hosts: all
-  gather_facts: false
-  become: true
+  gather_facts: no
+  become: yes
+  serial: 30%
+
+  vars:
+    git_username: root
+    git_groupname: root
+    git_repository_destination: /root
+    git_repositories:
+      - repo: https://github.com/robertdebock/ansible-role-bootstrap
+        dest: bootstrap
+      - repo: https://github.com/robertdebock/ansible-role-bootstrap
+        dest: bootstrap-force
+        force: yes
+      - repo: https://github.com/robertdebock/ansible-role-bootstrap
+        dest: bootstrap-version
+        version: 2.11.1
 
   roles:
     - role: robertdebock.bootstrap
