--- a/molecule/vagrant/playbook.yml
+++ b/molecule/vagrant/playbook.yml
@@ -1,9 +1,24 @@
 ---
 - name: Converge
   hosts: all
-  become: true
-  gather_facts: false
+  gather_facts: no
+  become: yes
+  serial: 30%
+
+  vars:
+    git_username: root
+    git_groupname: root
+    git_repository_destination: /root
+    git_repositories:
+      - repo: https://github.com/robertdebock/ansible-role-bootstrap
+        dest: bootstrap
+      - repo: https://github.com/robertdebock/ansible-role-bootstrap
+        dest: bootstrap-force
+        force: yes
+      - repo: https://github.com/robertdebock/ansible-role-bootstrap
+        dest: bootstrap-version
+        version: 2.11.1
 
   roles:
-    - robertdebock.bootstrap
-    - ansible-role-git
+    - role: robertdebock.bootstrap
+    - role: ansible-role-git
