--- a/molecule/resources/prepare.yml
+++ b/molecule/resources/prepare.yml
@@ -1,5 +1,5 @@
 ---
-- name: Converge
+- name: Prepare
   hosts: all
   gather_facts: no
   become: yes
@@ -21,4 +21,3 @@
 
   roles:
     - role: robertdebock.bootstrap
-    - role: ansible-role-git
