--- a/molecule/resources/playbook.yml
+++ b/molecule/resources/playbook.yml
@@ -4,5 +4,19 @@
   become: yes
   gather_facts: yes
 
+  vars:
+    git_username: root
+    git_groupname: root
+    git_repository_destination: /root
+    git_repositories:
+      - repo: https://github.com/robertdebock/ansible-role-bootstrap
+        dest: bootstrap
+      - repo: https://github.com/robertdebock/ansible-role-bootstrap
+        dest: bootstrap-force
+        force: yes
+      - repo: https://github.com/robertdebock/ansible-role-bootstrap
+        dest: bootstrap-version
+        version: 2.11.1
+
   roles:
     - ansible-role-git
