--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,7 +1,4 @@
 ---
 # vars file for git
-_git_packages:
-  default:
-    - git
-
-git_packages: "{{ _git_packages[ansible_distribution] | default(_git_packages['default']) }}"
+git_packages:
+  - git
