use loop instead of with _items

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -54,7 +54,7 @@
     accept_hostkey: yes
     version: "{{ item.version | default('HEAD') }}"
     force: "{{ item.force | default(git_force) }}"
-  with_items: "{{ git_repositories }}"
+  loop: "{{ git_repositories }}"
   become: yes
   become_user: "{{ git_username }}"
   when:
