--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,5 +1,8 @@
 ---
 # tasks file for git
+- name: include assert.yml
+  include_tasks: assert.yml
+
 - name: install git
   package:
     name: "{{ git_packages }}"
