--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -12,7 +12,7 @@
 # git_user_name: John Doe
 
 # Where to place the copies of the repositories.
-git_repository_destination: /home/{{ git_username }}/Documents/github.com/{{ git_username }}
+git_repository_destination: /home/{{ git_username | default('unset') }}/Documents/github.com/{{ git_username | default('unset') }}
 
 # Should git force (overwrite locally changed) clone? (Can also be controlled
 # per repository, see below.
