--- a/tasks/assert.yml
+++ b/tasks/assert.yml
@@ -56,6 +56,8 @@
       - item.dest | length > 0
     quiet: yes
   loop: "{{ git_repositories }}"
+  loop_control:
+    label: "{{ item.repo }}"
   when:
     - git_repositories is defined
 
