--- a/tasks/assert.yml
+++ b/tasks/assert.yml
@@ -1,21 +1,21 @@
 ---
 
 - name: test if git_repository_destination is set correctly
-  assert:
+  ansible.builtin.assert:
     that:
       - git_repository_destination is defined
       - git_repository_destination is string
     quiet: yes
 
 - name: test if git_force is set correctly
-  assert:
+  ansible.builtin.assert:
     that:
       - git_force is defined
       - git_force is boolean
     quiet: yes
 
 - name: test if git_repositories is set correctly
-  assert:
+  ansible.builtin.assert:
     that:
       - git_repositories is iterable
     quiet: yes
@@ -23,7 +23,7 @@
     - git_repositories is defined
 
 - name: test if item in git_repositories is set correctly
-  assert:
+  ansible.builtin.assert:
     that:
       - item.repo is defined
       - item.repo is string
@@ -37,7 +37,7 @@
     - git_repositories is defined
 
 - name: test if item in git_repositories with force is set correctly
-  assert:
+  ansible.builtin.assert:
     that:
       - item.version is boolean
     quiet: yes
