--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -7,12 +7,12 @@
   delegate_to: localhost
 
 - name: install git
-  package:
+  ansible.builtin.package:
     name: "{{ git_packages }}"
     state: present
 
 - name: see if the specified user exists
-  getent:
+  ansible.builtin.getent:
     database: passwd
     key: "{{ git_username }}"
     fail_key: no
@@ -20,7 +20,7 @@
     - git_username is defined
 
 - name: create directory for git configuration
-  file:
+  ansible.builtin.file:
     path: /home/{{ git_username }}
     state: directory
     owner: "{{ git_username | default(omit) }}"
@@ -31,7 +31,7 @@
     - getent_passwd[git_username] != none
 
 - name: place git configuration
-  template:
+  ansible.builtin.template:
     src: gitconfig.j2
     dest: /home/{{ git_username }}/.gitconfig
     mode: "0644"
@@ -42,7 +42,7 @@
     - getent_passwd[git_username] != none
 
 - name: create repository_destination
-  file:
+  ansible.builtin.file:
     path: "{{ git_repository_destination }}"
     state: directory
     owner: "{{ git_username | default(omit) }}"
@@ -54,7 +54,7 @@
     - getent_passwd[git_username] != none
 
 - name: clone all roles
-  git:
+  ansible.builtin.git:
     repo: "{{ item.repo }}"
     dest: "{{ git_repository_destination }}/{{ item.dest }}"
     accept_hostkey: yes
