Find and quote risky values.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -22,7 +22,7 @@ git_force: no
 # git_repositories:
 #   - repo: https://github.com/robertdebock/ansible-role-bootstrap.git
 #     dest: bootstrap
-#     version: 2.2.4
+#     version: "2.2.4"
 #   - repo: ssh://git@github.com/robertdebock/ansible-role-java.git
 #     dest: java
 #   - repo: ssh://git@github.com/robertdebock/ansible-role-tomcat.git
