--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -20,11 +20,11 @@ git_force: no
 
 # The repositories to check out, bootstrap is pinned to a version, java will get HEAD/latest.
 # git_repositories:
-#   - repo: https://github.com/robertdebock/ansible-role-bootstrap.git
+#   - repo: "https://github.com/robertdebock/ansible-role-bootstrap.git"
 #     dest: bootstrap
 #     version: "2.2.4"
-#   - repo: ssh://git@github.com/robertdebock/ansible-role-java.git
+#   - repo: "ssh://git@github.com/robertdebock/ansible-role-java.git"
 #     dest: java
-#   - repo: ssh://git@github.com/robertdebock/ansible-role-tomcat.git
+#   - repo: "ssh://git@github.com/robertdebock/ansible-role-tomcat.git"
 #     dest: tomcat
 #     force: yes
