--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -9,12 +9,12 @@
     git_groupname: root
     git_repository_destination: /root
     git_repositories:
-      - repo: https://github.com/robertdebock/ansible-role-bootstrap
+      - repo: "https://github.com/robertdebock/ansible-role-bootstrap"
         dest: bootstrap
-      - repo: https://github.com/robertdebock/ansible-role-bootstrap
+      - repo: "https://github.com/robertdebock/ansible-role-bootstrap"
         dest: bootstrap-force
         force: yes
-      - repo: https://github.com/robertdebock/ansible-role-bootstrap
+      - repo: "https://github.com/robertdebock/ansible-role-bootstrap"
         dest: bootstrap-version
         version: "2.11.1"
 
