--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -5,4 +5,4 @@
 repository:
   description: Install and configure git on your system.
   homepage: https://robertdebock.nl/
-  topics: git, ansible, molecule, tox, playbook, hacktoberfest
+  topics: git, ansible, molecule, tox, playbook
