--- a/tasks/assert.yml
+++ b/tasks/assert.yml
@@ -1,20 +1,20 @@
 ---
 
-- name: Test if git_repository_destination is set correctly
+- name: assert | Test if git_repository_destination is set correctly
   ansible.builtin.assert:
     that:
       - git_repository_destination is defined
       - git_repository_destination is string
     quiet: yes
 
-- name: Test if git_force is set correctly
+- name: assert | Test if git_force is set correctly
   ansible.builtin.assert:
     that:
       - git_force is defined
       - git_force is boolean
     quiet: yes
 
-- name: Test if git_repositories is set correctly
+- name: assert | Test if git_repositories is set correctly
   ansible.builtin.assert:
     that:
       - git_repositories is iterable
@@ -22,7 +22,7 @@
   when:
     - git_repositories is defined
 
-- name: Test if item in git_repositories is set correctly
+- name: assert | Test if item in git_repositories is set correctly
   ansible.builtin.assert:
     that:
       - item.repo is defined
@@ -36,7 +36,7 @@
   when:
     - git_repositories is defined
 
-- name: Test if item in git_repositories with force is set correctly
+- name: assert | Test if item in git_repositories with force is set correctly
   ansible.builtin.assert:
     that:
       - item.version is boolean
