Shorter task names.

--- a/tasks/assert.yml
+++ b/tasks/assert.yml
@@ -1,6 +1,6 @@
 ---
 
-- name: assert | Test if git_repository_destination is set correctly
+- name: assert | Test git_repository_destination
   ansible.builtin.assert:
     that:
       - git_repository_destination is defined
@@ -8,14 +8,14 @@
       - git_repository_destination is not none
     quiet: yes
 
-- name: assert | Test if git_force is set correctly
+- name: assert | Test git_force
   ansible.builtin.assert:
     that:
       - git_force is defined
       - git_force is boolean
     quiet: yes
 
-- name: assert | Test if git_repositories is set correctly
+- name: assert | Test git_repositories
   ansible.builtin.assert:
     that:
       - git_repositories is iterable
@@ -23,7 +23,7 @@
   when:
     - git_repositories is defined
 
-- name: assert | Test if item in git_repositories is set correctly
+- name: assert | Test item in git_repositories
   ansible.builtin.assert:
     that:
       - item.repo is defined
@@ -39,7 +39,7 @@
   when:
     - git_repositories is defined
 
-- name: assert | Test if item in git_repositories with force is set correctly
+- name: assert | Test item in git_repositories with force
   ansible.builtin.assert:
     that:
       - item.version is boolean
