--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,7 +4,7 @@
 - name: Import assert.yml
   ansible.builtin.import_tasks:
     file: assert.yml
-  run_once: yes
+  run_once: true
   delegate_to: localhost
 
 - name: Install git
@@ -16,7 +16,7 @@
   ansible.builtin.getent:
     database: passwd
     key: "{{ git_username }}"
-    fail_key: no
+    fail_key: false
   when:
     - git_username is defined
 
@@ -58,13 +58,13 @@
   ansible.builtin.git:
     repo: "{{ item.repo }}"
     dest: "{{ git_repository_destination }}/{{ item.dest }}"
-    accept_hostkey: yes
+    accept_hostkey: true
     version: "{{ item.version | default('HEAD') }}"
     force: "{{ item.force | default(git_force) }}"
   loop: "{{ git_repositories }}"
   loop_control:
     label: "{{ item.dest }}"
-  become: yes
+  become: true
   become_user: "{{ git_username }}"
   when:
     - git_repositories is defined
