--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -1,8 +1,8 @@
 ---
 - name: Converge
   hosts: all
-  become: yes
-  gather_facts: yes
+  become: true
+  gather_facts: true
 
   vars:
     git_username: root
@@ -13,7 +13,7 @@
         dest: bootstrap
       - repo: "https://github.com/robertdebock/ansible-role-bootstrap"
         dest: bootstrap-force
-        force: yes
+        force: true
       - repo: "https://github.com/robertdebock/ansible-role-bootstrap"
         dest: bootstrap-version
         version: "2.11.1"
